--- a/widget/index.html
+++ b/widget/index.html
@@ -9,12 +9,16 @@
 	<script src="../../../scripts/buildfire.js"></script>
 	<script src="../../../scripts/angular/angular.min.js"></script>
 	<script src="../../../scripts/angular/angular-route.min.js"></script>
+	<script src="../../../scripts/angular/angular-resource.js"></script>
 	<script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
 	<script type="text/javascript" src="../../../scripts/owlCarousel/owlCarousel.js"></script>
 	<script src="../../../scripts/buildfire/components/carousel/carousel.js"></script>
+	<script src="../../../scripts/tinymce/tinymce.min.js"></script>
+	<script src="../../../scripts/tinymce/ui-tinymce.js"></script>
 	<script src="../control/content/app.js"></script>
-	<script src="../control/content/controllers/main.controller.js"></script>
+	<script src="../control/content/app.service.js"></script>
 	<script src="app.js"></script>
+	<script src="app.service.js"></script>
 	<script src="components/config.js"></script>
 	<script src="controllers/widget.controller.js"></script>
 </head>
