--- a/control/content/index.html
+++ b/control/content/index.html
@@ -19,8 +19,7 @@
     <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="../../../../scripts/sortable.min.js"></script>
     <script src="app.js"></script>
-    <script src="app.service.js"></script>
-    <script src="components/config.js"></script>
+    <script src="components/config/config.js"></script>
     <script src="controllers/main.controller.js"></script>
 </head>
 <body>
