few more changes

--- a/widget/index.html
+++ b/widget/index.html
@@ -25,6 +25,6 @@
 	<script src="controllers/widget.controller.js"></script>
 </head>
 <body>
-<div ng-view=""></div>
+<button ng-click='send()'>Send message</button>
 </body>
 </html>
