--- a/control/content/index.html
+++ b/control/content/index.html
@@ -9,9 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../../../../scripts/buildfire.js"></script>
     <script src="../../../../scripts/angular/angular.min.js"></script>
-    <script src="../../../../scripts/angular/angular-resource.js"></script>
-    <script src="../../../../scripts/angular/angular-route.min.js"></script>
-    <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="../../../../scripts/jquery/jquery-1.11.2.min.js"></script>
     <script src="../../../../scripts/buildfire/components/carousel/carousel.js"></script>
     <script src="../../../../scripts/tinymce/tinymce.min.js"></script>
@@ -19,7 +16,6 @@
     <script src="../../../../scripts/angular/ui-bootstrap.min.js"></script>
     <script src="../../../../scripts/sortable.min.js"></script>
     <script src="app.js"></script>
-    <script src="components/config/config.js"></script>
     <script src="controllers/main.controller.js"></script>
 </head>
 <body>
@@ -30,7 +26,6 @@
     }
 </style>
 
-<div ng-view=""></div>
-
+<h1>HELLO WORLD</h1>
 </body>
 </html>
